# datamodel-codegen-ref-bug

./: README.md  pyproject.toml
demo/: api.yml
demo/household/: address.yml  person.yml
